// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-top: 16px;
}

@media only screen and (max-width: 1023px) {
  .emotion-0 {
    padding-bottom: 32px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    padding-bottom: 24px;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  gap: 33px;
}

.emotion-2 h2,
.emotion-2 h3,
.emotion-2 h4 {
  margin-top: 4px;
}

.emotion-2:not(:last-child):after {
  content: '';
  border-left: 2px dashed #E8EDEB;
  bottom: 0;
  left: 16px;
  position: absolute;
  top: 0;
  z-index: -1;
}

.emotion-4 {
  position: relative;
}

.emotion-6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #E3FCF7;
  color: #00684A;
  height: 34px;
  width: 34px;
}

.emotion-8 {
  padding-bottom: 64px;
}

@media only screen and (max-width: 767px) {
  .emotion-8 {
    padding-bottom: 40px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-8 {
    padding-bottom: 32px;
  }
}

.emotion-9 {
  margin-bottom: 16px;
}

.emotion-11 {
  margin: unset;
  font-family: Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #21313C;
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  font-weight: 400;
}

.emotion-15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
  line-height: 13px;
  outline: none;
  color: #016BF8;
}

.emotion-15:focus {
  outline: none;
}

.emotion-15>code {
  color: #016BF8;
}

.emotion-15::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.emotion-15:focus .emotion-15::after {
  background-color: #0498EC;
}

.emotion-15:hover::after {
  background-color: #E8EDEB;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          1
        </div>
      </div>
      <div
        class="emotion-8"
      >
        <div
          class="emotion-9 emotion-10 emotion-11"
        >
          Connect to a MongoDB deployment hosted on MongoDB Atlas, or a deployment hosted locally on your own machine.
        </div>
        <div
          class="emotion-9 emotion-10 emotion-11"
        >
          <a
            class="emotion-15 emotion-16"
            href="/connect/#std-label-connect-run-compass"
          >
            To learn more, see Connect to MongoDB
          </a>
        </div>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          2
        </div>
      </div>
      <div
        class="emotion-8"
      >
        <div
          class="emotion-9 emotion-10 emotion-11"
        >
          Import data from CSV or JSON files into your MongoDB database.
        </div>
        <div
          class="emotion-9 emotion-10 emotion-11"
        >
          <a
            class="emotion-15 emotion-16"
            href="/import-export/#std-label-compass-import-export"
          >
            To learn more, see Import and Export Data
          </a>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders steps nested in include nodes 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-top: 16px;
}

@media only screen and (max-width: 1023px) {
  .emotion-0 {
    padding-bottom: 32px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    padding-bottom: 24px;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  gap: 33px;
}

.emotion-2 h2,
.emotion-2 h3,
.emotion-2 h4 {
  margin-top: 4px;
}

.emotion-2:not(:last-child):after {
  content: '';
  border-left: 2px dashed #E8EDEB;
  bottom: 0;
  left: 16px;
  position: absolute;
  top: 0;
  z-index: -1;
}

.emotion-4 {
  position: relative;
}

.emotion-6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #E3FCF7;
  color: #00684A;
  height: 34px;
  width: 34px;
}

.emotion-8 {
  padding-bottom: 64px;
}

@media only screen and (max-width: 767px) {
  .emotion-8 {
    padding-bottom: 40px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-8 {
    padding-bottom: 32px;
  }
}

.emotion-9 {
  margin-top: 24px;
  margin-bottom: 8px;
}

.emotion-10 {
  margin-top: 16px;
  margin-bottom: 24px;
}

.emotion-12 {
  margin: unset;
  font-family: Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #21313C;
  font-size: 32px;
  line-height: 40px;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
}

.emotion-13 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 0 10px;
  visibility: hidden;
}

.emotion-14 {
  border-radius: 0!important;
  display: initial!important;
  margin: initial!important;
}

.emotion-16 {
  margin-top: -175px;
  position: absolute;
  padding-bottom: 2px;
}

.emotion-18 {
  margin-bottom: 16px;
}

.emotion-20 {
  margin: unset;
  font-family: Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #21313C;
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  font-weight: 400;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          1
        </div>
      </div>
      <div
        class="emotion-8"
      >
        <section>
          <h1
            class="emotion-9 contains-headerlink emotion-10 emotion-11 emotion-12"
            weight="medium"
          >
            Step 1
            <a
              class="headerlink emotion-13"
              href="#step-1"
              title="Permalink to this heading"
            >
              <img
                class="emotion-14 emotion-15"
                src="/assets/link.svg"
              />
            </a>
            <div
              class="emotion-16 emotion-17"
              id="step-1"
            />
          </h1>
          <div
            class="emotion-18 emotion-19 emotion-20"
          >
            Content for step 1
          </div>
        </section>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          2
        </div>
      </div>
      <div
        class="emotion-8"
      >
        <section>
          <h1
            class="emotion-9 contains-headerlink emotion-10 emotion-11 emotion-12"
            weight="medium"
          >
            Step 2
            <a
              class="headerlink emotion-13"
              href="#step-2"
              title="Permalink to this heading"
            >
              <img
                class="emotion-14 emotion-15"
                src="/assets/link.svg"
              />
            </a>
            <div
              class="emotion-16 emotion-17"
              id="step-2"
            />
          </h1>
          <div
            class="emotion-18 emotion-19 emotion-20"
          >
            Content for step 2
          </div>
        </section>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          3
        </div>
      </div>
      <div
        class="emotion-8"
      >
        <section>
          <h1
            class="emotion-9 contains-headerlink emotion-10 emotion-11 emotion-12"
            weight="medium"
          >
            Step 3
            <a
              class="headerlink emotion-13"
              href="#step-3"
              title="Permalink to this heading"
            >
              <img
                class="emotion-14 emotion-15"
                src="/assets/link.svg"
              />
            </a>
            <div
              class="emotion-16 emotion-17"
              id="step-3"
            />
          </h1>
          <div
            class="emotion-18 emotion-19 emotion-20"
          >
            Content for step 3
          </div>
        </section>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          4
        </div>
      </div>
      <div
        class="emotion-8"
      >
        <section>
          <h1
            class="emotion-9 contains-headerlink emotion-10 emotion-11 emotion-12"
            weight="medium"
          >
            Step 4
            <a
              class="headerlink emotion-13"
              href="#step-4"
              title="Permalink to this heading"
            >
              <img
                class="emotion-14 emotion-15"
                src="/assets/link.svg"
              />
            </a>
            <div
              class="emotion-16 emotion-17"
              id="step-4"
            />
          </h1>
          <div
            class="emotion-18 emotion-19 emotion-20"
          >
            Content for step 4
          </div>
        </section>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          5
        </div>
      </div>
      <div
        class="emotion-8"
      >
        <section>
          <h1
            class="emotion-9 contains-headerlink emotion-10 emotion-11 emotion-12"
            weight="medium"
          >
            Step 5
            <a
              class="headerlink emotion-13"
              href="#step-5"
              title="Permalink to this heading"
            >
              <img
                class="emotion-14 emotion-15"
                src="/assets/link.svg"
              />
            </a>
            <div
              class="emotion-16 emotion-17"
              id="step-5"
            />
          </h1>
          <div
            class="emotion-18 emotion-19 emotion-20"
          >
            Content for step 5
          </div>
        </section>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          6
        </div>
      </div>
      <div
        class="emotion-8"
      >
        <section>
          <h1
            class="emotion-9 contains-headerlink emotion-10 emotion-11 emotion-12"
            weight="medium"
          >
            Step 6
            <a
              class="headerlink emotion-13"
              href="#step-6"
              title="Permalink to this heading"
            >
              <img
                class="emotion-14 emotion-15"
                src="/assets/link.svg"
              />
            </a>
            <div
              class="emotion-16 emotion-17"
              id="step-6"
            />
          </h1>
          <div
            class="emotion-18 emotion-19 emotion-20"
          >
            Content for step 6
          </div>
        </section>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          7
        </div>
      </div>
      <div
        class="emotion-8"
      >
        <section>
          <h1
            class="emotion-9 contains-headerlink emotion-10 emotion-11 emotion-12"
            weight="medium"
          >
            Step 7
            <a
              class="headerlink emotion-13"
              href="#step-7"
              title="Permalink to this heading"
            >
              <img
                class="emotion-14 emotion-15"
                src="/assets/link.svg"
              />
            </a>
            <div
              class="emotion-16 emotion-17"
              id="step-7"
            />
          </h1>
          <div
            class="emotion-18 emotion-19 emotion-20"
          >
            Content for step 7
          </div>
        </section>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders with "normal" or YAML steps styling 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-top: 16px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
}

.emotion-2 h2,
.emotion-2 h3,
.emotion-2 h4 {
  margin-top: 4px;
}

.emotion-4 {
  position: relative;
}

.emotion-6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #333;
  color: #FFFFFF;
  height: 24px;
  width: 24px;
}

.emotion-9 {
  margin-bottom: 16px;
}

.emotion-11 {
  margin: unset;
  font-family: Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #21313C;
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  font-weight: 400;
}

.emotion-15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
  line-height: 13px;
  outline: none;
  color: #016BF8;
}

.emotion-15:focus {
  outline: none;
}

.emotion-15>code {
  color: #016BF8;
}

.emotion-15::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.emotion-15:focus .emotion-15::after {
  background-color: #0498EC;
}

.emotion-15:hover::after {
  background-color: #E8EDEB;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          1
        </div>
      </div>
      <div
        class="emotion-8"
      >
        <div
          class="emotion-9 emotion-10 emotion-11"
        >
          Connect to a MongoDB deployment hosted on MongoDB Atlas, or a deployment hosted locally on your own machine.
        </div>
        <div
          class="emotion-9 emotion-10 emotion-11"
        >
          <a
            class="emotion-15 emotion-16"
            href="/connect/#std-label-connect-run-compass"
          >
            To learn more, see Connect to MongoDB
          </a>
        </div>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          2
        </div>
      </div>
      <div
        class="emotion-8"
      >
        <div
          class="emotion-9 emotion-10 emotion-11"
        >
          Import data from CSV or JSON files into your MongoDB database.
        </div>
        <div
          class="emotion-9 emotion-10 emotion-11"
        >
          <a
            class="emotion-15 emotion-16"
            href="/import-export/#std-label-compass-import-export"
          >
            To learn more, see Import and Export Data
          </a>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
